add jmh test