@@ -1,5 +1,6 @@
 plugins {
     id("application")
+    id("me.champeau.jmh") version ("0.7.1")
 }
 
 description = "Allay-Server"
@@ -24,4 +25,8 @@ tasks.processResources {
     exclude("**/unpacked/**")
     //todo Confirm that the state hash is valid and remove it
     //exclude("**/block_palette.nbt")
+}
+
+tasks.jmh {
+    jvmArgs.add("--enable-preview")
 }
